objects/VisitOps__LocationTypeLink__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Account_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if an Account must be selected before a request can be submitted for this Location and Visit Type.</inlineHelpText>
        <label>Account Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Allow_Editing_During_These_Statuses__c</fullName>
        <description>Allow requestors to edit their own records during these statuses.</description>
        <inlineHelpText>Chosen statuses will allow Owners to edit portions of their own requests after submitting.</inlineHelpText>
        <label>Allow Editing During These Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Allow_Multiple_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to allow requestors to book more than the primary room during the request process.</inlineHelpText>
        <label>Allow Multiple Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Contact_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if a Contact or Attendee must be added before a request can be submitted for this Location and Visit Type.</inlineHelpText>
        <label>Contact Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Create_Agenda_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to automatically create agenda sessions for each additional room booked during the request process.</inlineHelpText>
        <label>Create Agenda Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Customer_Post_Survey__c</fullName>
        <inlineHelpText>Enter the number of days after the visit that you&apos;d like surveys to be sent. If you do not want surveys for this Location and Visit Type, leave the field blank.</inlineHelpText>
        <label>Customer Post Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Customer_Pre_Survey__c</fullName>
        <inlineHelpText>Enter the number of days prior to the visit that you&apos;d like surveys to be sent. If you do not want surveys for this Location and Visit Type, leave the field blank.</inlineHelpText>
        <label>Customer Pre Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Hide_Presenters_on_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Presenters on Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsRoomMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether room is mandatory for a particular Location and Visit Type combination</description>
        <inlineHelpText>Indicates whether an available room is required to submit a request. If checked, all groups must be in the Available section in &quot;Restrict room booking for&quot;.</inlineHelpText>
        <label>Room Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Lead_Time__c</fullName>
        <description>This stores the number of days below which a non - Visit team/admin user should not able to submit a visit.</description>
        <inlineHelpText>Enter the number of lead time days required before a request can be submitted for this Location and Visit Type. Example: Requests cannot be submitted with less than 21 days lead time. If no lead time is required, leave the field blank.</inlineHelpText>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Associated Visit Types</relationshipLabel>
        <relationshipName>LocationTypeLink</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__Opportunity_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if an Opportunity must be selected before a request can be submitted for this Location and Visit Type.</inlineHelpText>
        <label>Opportunity Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_Post_Survey__c</fullName>
        <inlineHelpText>Enter the number of days after the visit that you&apos;d like surveys to be sent. If you do not want surveys for this Location and Visit Type, leave the field blank.</inlineHelpText>
        <label>Owner Post Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_Pre_Survey__c</fullName>
        <inlineHelpText>Enter the number of days prior to the visit that you&apos;d like surveys to be sent. If you do not want surveys for this Location and Visit Type, leave the field blank.</inlineHelpText>
        <label>Owner Pre Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Post_Survey__c</fullName>
        <inlineHelpText>Enter the number of days after the visit that you&apos;d like surveys to be sent. If you do not want surveys for this Location and Visit Type, leave the field blank.</inlineHelpText>
        <label>Presenter Post Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__RestrictRoomBookingFor__c</fullName>
        <description>Indicates user types who cannot book a room for a visit for a particular Location and Visit Type combination. (The picklist values are obtained from UserType__c picklist field on User object. Ensure these picklist values are always in sync). RestrictRoomBookingFor__c field takes precendence over IsRoomMandatory__c field.</description>
        <inlineHelpText>Groups in the Chosen section will be restricted from booking a room during the request process.</inlineHelpText>
        <label>Restrict room booking for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visit Team</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Schedule_Survey__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, this indicates that surveys will be sent based on the days entered. If no surveys are to be sent, leave the fields empty.</inlineHelpText>
        <label>Schedule Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitType__c</fullName>
        <label>VisitType</label>
        <referenceTo>VisitOps__VisitType__c</referenceTo>
        <relationshipLabel>Associated Locations</relationshipLabel>
        <relationshipName>LocationTypeLinks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__of_rooms_allowed__c</fullName>
        <inlineHelpText>Enter the number of additional rooms requestors can book during the request process.</inlineHelpText>
        <label># of rooms allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Location Type Link</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>VisitOps__VisitType__c</columns>
        <columns>VisitOps__Lead_Time__c</columns>
        <columns>VisitOps__Customer_Pre_Survey__c</columns>
        <columns>VisitOps__Schedule_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LTL{0000}</displayFormat>
        <label>LocationTypeLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Type Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>